# amazfit-cli

./: .env.example  .gitignore  README.md  pyproject.toml
amazfit_cli/: __init__.py  cli.py  client.py  models.py
